--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
 Django==3.2.5
 django-environ==0.4.5
 psycopg2==2.9.1
+git+https://github.com/dabapps/django-db-queue@2e256031d01279e0084c079b78c40e9823f8b758
